# garcon-blade

./: .gitignore  COPYING  HACKING  Makefile.am  NEWS  README  TODO  configure.ac.in
data/xfce/: Makefile.am  xfce-applications.menu
docs/reference/: Makefile.am  pojk-docs.xml  pojk-sections.txt  pojk.types
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  hy_AM.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  (+23 more)
pojk/: Makefile.am  pojk-1.pc.in  pojk-config.c  pojk-config.h.in  pojk-environment.c  pojk-environment.h  pojk-menu-directory.c  pojk-menu-directory.h  pojk-menu-element.c  pojk-menu-element.h  pojk-menu-item-action.c  pojk-menu-item-action.h  pojk-menu-item-cache.c  pojk-menu-item-cache.h  pojk-menu-item-pool.c  pojk-menu-item-pool.h  pojk-menu-item.c  pojk-menu-item.h  pojk-menu-merger.c  pojk-menu-merger.h  pojk-menu-node.c  pojk-menu-node.h  pojk-menu-parser.c  pojk-menu-parser.h  pojk-menu-separator.c  pojk-menu-separator.h  pojk-menu-tree-provider.c  pojk-menu-tree-provider.h  pojk-menu.c  pojk-menu.h  pojk-private.c  pojk-private.h  pojk.h
pojk-gtk/: Makefile.am  pojk-gtk-menu.c  pojk-gtk-menu.h  pojk-gtk.h  pojk-gtk2-1.pc.in  pojk-gtk3-1.pc.in
tests/: Makefile.am  test-display-menu.c  test-menu-parser.c  test-menu-spec.c
